<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.MainActivity">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_detail"
        android:orderInCategory="100"
        android:title="@string/detail"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_trigger"
        android:orderInCategory="100"
        android:title="@string/trigger"
        app:showAsAction="never" />
</menu>